--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                         <a href="#about" class="list-link">Nosotros</a>
                     </li>
                     <li class="list-item">
-                        <a href="#menu" class="list-link">Menu</a>
+                        <a href="#menu" class="list-link">Menú</a>
                     </li>
                     <li class="list-item">
-                        <a href="#reservation" class="list-link">Reservacion</a>
+                        <a href="#reservation" class="list-link">Reservación</a>
                     </li>
                     <li class="list-item">
                         <a href="#contact" class="list-link">Contacto</a>
@@ -98,7 +98,7 @@
             <div class="container section container-menu">
                 <div class="data-menu">
                     <h2 class="section-title">
-                        <span class="title-cursive">Menu</span>
+                        <span class="title-cursive">Menú</span>
                         ELABORADO PARA TI
                     </h2>
                 </div>
@@ -175,9 +175,9 @@
                     <input type="number" placeholder="Cantidad de personas" required>
                     <select class="branch-offices" title="Nuestras Sucursales" required>
                         <option value="">Sucursal a reservar</option>
-                        <option value="maximogomez">Maximo Gomez</option>
+                        <option value="maximogomez">Máximo Gómez</option>
                         <option value="sanisidro">Autopista San Isidro</option>
-                        <option value="agoramall">Agora Mall</option>
+                        <option value="agoramall">Ágora Mall</option>
                     </select>
                     <input type="tel" placeholder="Numero de contacto" required>
 
@@ -204,7 +204,7 @@
                     </span>
                     <span class="location">
                         <i class="uil uil-location-pin-alt"></i>
-                        Av. Maximo Gomez #52
+                        Av. Máximo Gómez #52
                     </span>
                 </div>
                 <img src="images/img-location.jpg" alt="" class="img-location">
@@ -231,7 +231,7 @@
                         <span class="time">10 AM - 11 PM</span>
                     </span>
                     <span>
-                        Miercoles
+                        Miércoles
                         <span class="time">10 AM - 11 PM</span>
                     </span>
                     <span>
@@ -243,7 +243,7 @@
                         <span class="time">10 AM - 11 PM</span>
                     </span>
                     <span>
-                        Sabado
+                        Sábado
                         <span class="time">10 AM - 11 PM</span>
                     </span>
                     <span>
@@ -269,10 +269,10 @@
                         <a href="#about" class="list-link">Nosotros</a>
                     </li>
                     <li class="list-item">
-                        <a href="#menu" class="list-link">Menu</a>
+                        <a href="#menu" class="list-link">Menú</a>
                     </li>
                     <li class="list-item">
-                        <a href="#reservation" class="list-link">Reservacion</a>
+                        <a href="#reservation" class="list-link">Reservación</a>
                     </li>
                     <li class="list-item">
                         <a href="#contact" class="list-link">Contacto</a>
